--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -33,6 +33,7 @@
 }
 
 html[data-bs-theme='dark'] {
+  --color-menu-text: {{ site.colors.logo_text_dark | default: "#F4F4F5" }};
   --color-primary-bg: {{ site.colors.primary_bg_dark | default: site.colors.primary_bg }};
   --color-primary-bg-2: {{ site.colors.primary_bg_2_dark | default: site.colors.primary_bg_2 }};
   --color-primary-bg-3: {{ site.colors.primary_bg_3_dark | default: site.colors.primary_bg_3 }};
