--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -127,7 +127,7 @@ body_classes: page-home
 {% endif %}
 
 {% if page.projects.enabled %}
-  <div class="section section-base-bg-2">
+  <div class="section section-base-bg">
     <div class="container">
       <div class="row">
 
