--- a/_sass/framework/zerostatic/_section.scss
+++ b/_sass/framework/zerostatic/_section.scss
@@ -27,6 +27,9 @@
   &.section-base-bg-3 {
     background-color: var(--color-base-bg-3);
   }
+  &.section-base-bg-4 {
+    background-color: var(--color-primary-bg);
+  }
 }
 
 // body.has-fixed-header {
