--- a/_sass/theme/_custom.scss
+++ b/_sass/theme/_custom.scss
@@ -9,7 +9,7 @@
 }
 
 .footer {
-  background-color: var(--color-primary-bg);
+  background-color: var(--color-primary-bg-3);
   color: var(--color-primary-text);
   
   .menu-footer {
@@ -41,7 +41,7 @@
 
 .bottom {
   background-color: var(--color-primary-bg-2);
-  color: var(--color-primary-text);
+  color: var(--color-primary-bg);
 }
 
 .page.page-home {
