--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,8 @@
 
     {% if site.darkmode.enable_dark_mode != false %}
       <script>
-          localStorage.getItem('darkMode') === 'true' && document.documentElement.setAttribute('data-bs-theme', 'dark');
+        document.documentElement.setAttribute('data-bs-theme', 'dark')
+//          localStorage.getItem('darkMode') === 'true' && document.documentElement.setAttribute('data-bs-theme', 'dark');
       </script>
     {% endif %}
 
