--- a/_sass/theme/_custom.scss
+++ b/_sass/theme/_custom.scss
@@ -31,8 +31,8 @@
 }
 .grid-header {
   h2 {
-    text-transform: uppercase;
-    font-size: 18px;
+    text-transform:none ;
+    font-size: 46px;
     font-weight: 600;
     color: var(--color-base-text);
     font-family: var(--font-family-heading);
