--- a/_includes/framework/hero.html
+++ b/_includes/framework/hero.html
@@ -40,7 +40,7 @@
   {% if divider %}{% include framework/divider.html %}{% endif %}
   <div class="container {% if divider %}pb-10{% endif %}">
     <div class="row align-items-center">
-      <div class="col-12 {% if image %}col-lg-6{% else %}col-lg-8{% endif %}">
+      <div class="col-lg-12 {% if image %}col-lg-6{% else %}col-lg-8{% endif %}">
         <div class="hero-text" style="{% if text_color %}color: {{ text_color }};{% endif %}">
           {% if heading %}<h1>{{ heading }}</h1>{% endif %}
           {% if sub_heading %}<p>{{ sub_heading }}</p>{% endif %}
