--- a/_includes/framework/hero.html
+++ b/_includes/framework/hero.html
@@ -55,8 +55,10 @@
                   outline=button.outline
                   style=button.style
                   fa_icon=button.fa_icon
+                  scroll_down=button.scroll_down
                 %}
               {% endfor %}
+              
             </div>
           {% endif %}
         </div>
@@ -71,3 +73,5 @@
     </div>
   </div>
 </div>
+<h6 id="scrolltobegin" style="visibility: hidden;"></h6>
+<br/>
