--- a/_sass/framework/zerostatic/_button.scss
+++ b/_sass/framework/zerostatic/_button.scss
@@ -23,6 +23,11 @@
     background: var(--color-base-bg-3);
     color: var(--color-primary-bg);
   }
+  &.button-none {
+    background: none;
+    border: 0px ;
+    color: var(--color-primary-bg);
+  }
   &.button-outline {
     background: none;
     border: 1px solid var(--color-primary-bg);
