--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -47,7 +47,7 @@ body_classes: page-contact
 <div class="section pt-0">
   <div class="container">
     <div class="row justify-content-start">
-      <div class="col-12 col-lg-8">
+      <div class="col-12 col-lg-8" style="color:#A0A0A0">
         {% if site.contact_form.use_netlify_form %}
           {% include framework/form-contact-netlify.html %}
         {% elsif site.contact_form.use_formspree_form and site.contact_form.formspree_endpoint %}
