--- a/_sass/framework/zerostatic/_title.scss
+++ b/_sass/framework/zerostatic/_title.scss
@@ -1,6 +1,7 @@
 .title {
   .title-heading {
     h1 {
+      padding-top: 30px;
       font-size: 36px;
       letter-spacing: -1px;
       line-height: 1.2;
