--- a/_sass/framework/zerostatic/_header.scss
+++ b/_sass/framework/zerostatic/_header.scss
@@ -61,6 +61,9 @@
   transition: all 200ms linear;
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
   color: var(--color-header-text);
+  .fa-chevron-down::before{
+    color: orange;
+  }
   a {
     color: var(--color-header-text);
   }
