--- a/_sass/theme/_custom.scss
+++ b/_sass/theme/_custom.scss
@@ -9,13 +9,14 @@
 }
 
 .footer {
-  background-color: var(--color-primary-bg-3);
-  color: var(--color-primary-text);
+  border-top: var(--color-base-bg-3) 1px solid;
+  background-image: linear-gradient(to right, var(--color-gradient-start), var(--color-gradient-end));
+  color: var(--color-text);
   
   .menu-footer {
     font-size: 16px;
     a {
-      color: var(--color-primary-text);
+      color: var(--color-text);
     }
   }
 }
@@ -27,19 +28,25 @@
     font-weight: 500;
     color: var(--color-primary-bg);
     font-family: $font-family-base;
+    text-decoration: overline;
+    text-decoration-color: var(--color-base-bg-3);
   }
 }
 .grid-header {
   h2 {
     text-transform:none ;
-    font-size: 46px;
-    font-weight: 600;
+    font-size: 40px;
+    font-weight: 900;
     color: var(--color-base-text);
     font-family: var(--font-family-heading);
+    border-left: var(--color-base-bg-3) 5px solid;
+    padding-left: 8px;
+    margin-bottom: 32px;
   }
 }
 
 .bottom {
+  border-top: var(--color-base-bg-3) 1px solid;
   background-color: var(--color-primary-bg-2);
   color: var(--color-primary-bg);
 }
