--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -34,3 +34,12 @@
   font-weight: 700;
   src: url('../fonts/Manrope/static/Manrope-Bold.ttf') format('ttf'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
+
+/* manrope-900 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Manrope';
+  font-style: normal;
+  font-weight: 900;
+  src: url('../fonts/Manrope/static/Manrope-ExtraBold.ttf') format('ttf'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
